--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
-    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "react-error-overlay": "^6.0.11",
+    "vite": "^5.4.2"
   }
 }
